Rename main CSS and JS files
- from licence-finder to application
- /component-guide won't load without files with these names
- makes this application more consistent with our others and Rails apps in general

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
     <title><%= content_for?(:page_title) ? yield(:page_title) : "Licence Finder" %> - GOV.UK</title>
     <meta name="description" content="Find out which licences you might need for your activity or business.">
     <meta name="robots" content="noindex">
-    <%= stylesheet_link_tag "licence-finder" %>
-    <%= javascript_include_tag 'licence-finder', defer: true %>
+    <%= stylesheet_link_tag "application" %>
+    <%= javascript_include_tag 'application', defer: true %>
     <%= yield :head %>
     <%= render 'govuk_publishing_components/components/meta_tags', content_item: @content_item %>
     <% if @meta_section %>
